# device-pilot

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
src/: __init__.py  buffer.py  config.py  detector.py  main.py  platform.py  recorder.py  session.py  session_manager.py
tests/: __init__.py  conftest.py  test_detector.py  test_integration.py  test_recorder.py  test_session.py  test_session_manager.py  test_video_integrity.py
